# gradecalc

./: .gitignore  Cargo.toml  Makefile  README.md
src/: categories.rs  errors.rs  example  main.rs  parser.rs  read_file.rs  serialization.rs  test.yml
