[package]
name = "gradecalc"
version = "0.1.0"
authors = ["junikimm717 <68165832+junikimm717@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_yaml="0.8.17"